2008-10-30  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs: Don't notify the
	file has changed unless the changes are saved to disk. Fixes bug
	#430497 - Widget names created in Stetic not available for
	autocomplete.

2008-10-29  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderView.cs (ShowPage): only
	regenerate the dummy structure when switching to the source page.

2008-10-28  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.GtkCore/ReferenceManager.cs: switch default updating
	to use the current assembly StoredReference version.  Avoids problems
	when the stored version has no corresponding installed package.
	Fixes #436246.

2008-10-27  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderProject.cs: don't store
	configuration on Project Save.  Avoids a crash due to file availability
	when saving config while loading and it's extraneous since we store
	the config on app exit and it contains no project specific props.

2008-10-22  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.GtkCore/GtkDesignInfo.cs (HasDesignedObjects): guard
	against null projects.

2008-10-21  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.GtkCore/GtkDesignInfo.cs (HasDesignedObjects): don't
	instantiate just to get the SteticFile. Avoids project file garbage.
	[Fixes #436201]

2008-10-21  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.GtkCore.GuiBuilder/CodeBinder.cs: guard against null
	documents returned from parse.  I think this is related to the old
	ErrorsDuringCompile check that was commented with the new parser port.
	[Fixes #436998]

2008-10-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs: fixed TODO.

2008-10-03  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderDisplayBinding:
	rework GetWindow method. now uses the ParsedDocument for a requested 